...

    <!-- Main VLC Interface -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="app_name" translatable="false">VLC</string>
    <string name="other">Other</string>
    <string name="sortby">Sort by…</string>
    <string name="sortby_name">Name</string>
    <string name="sortby_filename">File name</string>
    <string name="sortby_artist_name">Artist name</string>
    <string name="sortby_album_name">Album name</string>
    <string name="sortby_length">Length</string>
    <string name="sortby_date">Date</string>
    <string name="sortby_last_modified_date">Recently added</string>
    <string name="sortby_insertion">Insertion date</string>
...

    <plurals name="search_found_results_quantity">
        <item quantity="one">%d result found</item>
        <item quantity="other">%d results found</item>
    </plurals>

    <string name="play">Play</string>
    <string name="playback">Playback</string>
    <string name="playback_controls">Playback controls</string>
    <string name="medialibrary_scan">Media library scan</string>
    <string name="Medialibrary_progress">Media library scanning progress updates</string>
    <string name="play_from_start">Play from start</string>
    <string name="play_as_audio">Play as audio</string>
    <string name="play_as_video">Play as video</string>
    <string name="return_to_video">Long tap the cover to restore the video</string>
    <string name="video_app_switch_title">Background/PiP mode</string>
    <string name="video_app_switch_summary">Select VLC behavior when you switch to other application from video playback</string>
    <string name="play_pip_title">Play videos in Picture-in-picture mode</string>
    <string name="play_as_audio_background">Play videos in background</string>
    <string name="append">Append</string>
    <string name="insert_next">Insert next</string>
    <string name="play_all">Play all</string>
    <string name="append_all">Append all</string>
    <string name="resume_playback_short_title">Resume playback</string>
    <string name="resume_playback_long_title"> Resume playback of last playlist</string>
    <string name="resume_playback_error">Nothing to resume</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="set_song">Set as ringtone</string>
    <string name="set_song_question">Set \'%1$s\' as ringtone?</string>
    <string name="info">Information</string>
    <string name="confirm_delete">Delete the file \'%1$s\'?</string>
    <string name="confirm_delete_message">This is permanent and cannot be undone.</string>
    <string name="confirm_delete_album">Delete the album \'%1$s\'?</string>
    <string name="confirm_delete_several_media">Delete these %1$d media?</string>
    <string name="confirm_delete_folder">Delete the folder \'%1$s\' and all its contents?</string>
    <string name="confirm_delete_folders">Delete these %1$s folders and all their contents?</string>
...
    </plurals>
    <plurals name="track_quantity">
        <item quantity="one">1 track</item>
        <item quantity="other">%d tracks</item>
    </plurals>

    <string name="internal_memory">Internal memory</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="equalizer">Equalizer</string>
    <string name="all_albums">All albums</string>
    <string name="genres">Genres</string>
    <string name="playlists">Playlists</string>
    <string name="title">Title</string>
    <string name="directories">Directories</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait…</string>
    <string name="nomedia">No media files found, please transfer some files to your device or adjust your preferences.</string>
    <string name="empty_search">No item found for search %s</string>
    <string name="noplaylist">No playlist found.</string>
    <string name="nosubfolder">No subfolder</string>
...
    <string name="surface_best_fit">Best fit</string>
    <string name="surface_fit_screen">Fit screen</string>
    <string name="surface_fill">Fill</string>
    <string name="surface_original">Center</string>
    <string name="resize_tip">Long tap for more options</string>
    <string name="unseekable_stream">Unseekable stream</string>
    <string name="refresh">Refresh</string>
    <string name="track_audio">Audio track</string>
    <string name="track_video">Video track</string>
    <string name="track_text">Subtitle track</string>
    <string name="track_unknown">Unknown track</string>
    <string name="track_bitrate_info">Bitrate: %1$s/s\n</string>
    <string name="track_codec_info">Codec: %1$s\n</string>
...
    <string name="server_servername_hint">Server name, for convenience</string>
    <string name="server_port">Port: </string>
    <string name="login">Login</string>
    <string name="password">Password</string>

    <string name="search_no_result">No media found</string>
    <string name="favorites_add">Add to favorites</string>
    <string name="favorites_remove">Remove from favorites</string>
    <string name="favorites_edit">Edit</string>
    <string name="favorite_added">Saved to favorites</string>
    <string name="favorite_removed">Removed from favorites</string>

    <string name="streams">Streams</string>
...
    <string name="opengl_on">Force On</string>
    <string name="opengl_off">Force Off</string>
    <string name="network_favorites">Network favorites</string>
    <string name="network_shared_folders">Shared folders</string>
    <string name="encryption_warning">Warning, encryption is not available for this Android version, password will be stored in a private space but not encrypted</string>
    <string name="store_password">Remember password</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="popup_playback_title">Play video in a Pop-Up window</string>
    <string name="popup_playback">Playing in a Pop-Up window</string>
    <string name="popup_expand">Expand video</string>
    <string name="download_subtitles">Download subtitles</string>
    <string name="browse_folder">Browse folder</string>
    <string name="listen">Listen</string>
    <string name="apply_to_bt">Apply to bluetooth device</string>
    <string name="episodes">episodes</string>
    <string name="movies">movies</string>
    <string name="videos">videos</string>
...
    <string name="custom_set_restored">Custom equalizer-set restored.</string>
    <string name="unsaved_set_deleted_message">Unsaved equalizer-set deleted.</string>
    <string name="equalizer_new_preset_name">New</string>
    <string name="settings_ml_block_scan">Medialibrary is scanning your devices right now</string>
    <string name="recommendations">Recommendations</string>
    <string name="recommendations_desc">Recommendations cards on launcher</string>
    <string name="browser_quick_access">Quick Access</string>
    <string name="browser_storages">Storages</string>
    <string name="msg_delete_failed">Failed to delete media %1$s</string>
    <string name="renderer_list_title">Displays</string>
    <string name="sdcard_permission_dialog_title">You have to grant VLC write access to your SD Card</string>
    <string name="sdcard_permission_dialog_message">VLC cannot delete this file without write access permission.\nPlease go to your SD Card and click on \"Select\".\nYou may have to click on \"Show SD card\" first in the top-right menu</string>
    <string name="dialog_sd_wizard">Show me</string>
    <string name="renderers_disconnect">Disconnect</string>
...
